# aiki

./: .gitignore  LICENSE  README.md  config.example.toml  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  Settings.tsx  index.css  main.tsx  providers.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  config.rs  input.rs  keychain.rs  lib.rs  main.rs  pty.rs
src/components/: AiBlock.tsx  ApiKeySetup.tsx  BlockLog.tsx  CommandBlock.tsx  InputBar.tsx  Terminal.tsx
src/hooks/: useConfig.ts
src/models/: Block.ts
src/stores/: blockStore.ts
src/utils/: ansi.ts
