[package]
name = "aiki"
version = "0.1.0"
description = "Aiki — one terminal. Humans and AI in harmony."
authors = ["Jan Bílek"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aiki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
portable-pty = "0.9"
toml = "0.8"
dirs = "6"
tauri-plugin-window-state = "2.4.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
keyring = { version = "3", features = ["apple-native"] }
